test/conformance/chainsaw/policy-validation/cluster-policy/background-variables-update/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: background-variables-update
spec:
  background: false
  rules:
  - name: ns-vars-userinfo
    match:
      any:
      - resources:
          kinds:
            - Pod
    validate:
      failureAction: Audit
      message: The `owner` label is required for all Namespaces.
      pattern:
        metadata:
          labels:
            owner: "{{request.userInfo}}"
