test/conformance/chainsaw/policy-validation/cluster-policy/background-variables-update/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: background-variables-update
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
