test/conformance/chainsaw/policy-validation/cluster-policy/background-variables-update/02-policy.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: policy-update
spec:
  try:
  - apply:
      file: policy-update.yaml
